[gd_scene load_steps=6 format=3 uid="uid://1la0pgo1y5tp"]

[ext_resource type="Script" path="res://FamousGuests/Background.gd" id="1_5hcky"]
[ext_resource type="Script" path="res://FamousGuests/FamousGuests.gd" id="1_hh1al"]
[ext_resource type="Texture2D" uid="uid://lge4q45juhj0" path="res://Assets/Textures/Logos/logo_color_dott_300dpi.png" id="5_6xri5"]
[ext_resource type="PackedScene" uid="uid://cigu3gjcmh4rx" path="res://UI_Details/button_styled.tscn" id="7_jwkf8"]
[ext_resource type="Theme" uid="uid://ba32j84atev3c" path="res://Assets/Themes/Pixel_Theme.tres" id="10_bt386"]

[node name="Root" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1080.0
offset_bottom = -1920.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hh1al")
portrait_gutter = 35.0
input_lock_rect = Object(ColorRect,"_import_path":NodePath(""),"unique_name_in_owner":false,"process_mode":0,"process_priority":0,"process_physics_priority":0,"process_thread_group":0,"editor_description":"","visible":false,"modulate":Color(1, 1, 1, 1),"self_modulate":Color(1, 1, 1, 1),"show_behind_parent":false,"top_level":false,"clip_children":0,"light_mask":1,"visibility_layer":1,"z_index":0,"z_as_relative":true,"y_sort_enabled":false,"texture_filter":0,"texture_repeat":0,"material":null,"use_parent_material":false,"clip_contents":false,"custom_minimum_size":Vector2(0, 0),"layout_direction":0,"layout_mode":2,"anchors_preset":0,"anchor_left":0.0,"anchor_top":0.0,"anchor_right":0.0,"anchor_bottom":0.0,"offset_left":-1.0,"offset_top":1.0,"offset_right":717.0,"offset_bottom":1271.0,"grow_horizontal":1,"grow_vertical":1,"rotation":0.0,"scale":Vector2(1, 1),"pivot_offset":Vector2(0, 0),"size_flags_horizontal":1,"size_flags_vertical":1,"size_flags_stretch_ratio":1.0,"auto_translate":true,"localize_numeral_system":true,"tooltip_text":"","focus_neighbor_left":NodePath(""),"focus_neighbor_top":NodePath(""),"focus_neighbor_right":NodePath(""),"focus_neighbor_bottom":NodePath(""),"focus_next":NodePath(""),"focus_previous":NodePath(""),"focus_mode":0,"mouse_filter":0,"mouse_force_pass_scroll_events":true,"mouse_default_cursor_shape":0,"shortcut_context":null,"theme":null,"theme_type_variation":&"","color":Color(1, 1, 1, 0),"script":ExtResource("1_5hcky"))

panel_input_lock = Object(ColorRect,"_import_path":NodePath(""),"unique_name_in_owner":false,"process_mode":0,"process_priority":0,"process_physics_priority":0,"process_thread_group":0,"editor_description":"","visible":false,"modulate":Color(1, 1, 1, 1),"self_modulate":Color(1, 1, 1, 1),"show_behind_parent":false,"top_level":false,"clip_children":0,"light_mask":1,"visibility_layer":1,"z_index":100,"z_as_relative":true,"y_sort_enabled":false,"texture_filter":0,"texture_repeat":0,"material":null,"use_parent_material":false,"clip_contents":false,"custom_minimum_size":Vector2(0, 0),"layout_direction":0,"layout_mode":2,"anchors_preset":0,"anchor_left":0.0,"anchor_top":0.0,"anchor_right":0.0,"anchor_bottom":0.0,"offset_left":-1.0,"offset_top":1.0,"offset_right":717.0,"offset_bottom":1077.0,"grow_horizontal":1,"grow_vertical":1,"rotation":0.0,"scale":Vector2(1, 1),"pivot_offset":Vector2(0, 0),"size_flags_horizontal":1,"size_flags_vertical":1,"size_flags_stretch_ratio":1.0,"auto_translate":true,"localize_numeral_system":true,"tooltip_text":"","focus_neighbor_left":NodePath(""),"focus_neighbor_top":NodePath(""),"focus_neighbor_right":NodePath(""),"focus_neighbor_bottom":NodePath(""),"focus_next":NodePath(""),"focus_previous":NodePath(""),"focus_mode":0,"mouse_filter":0,"mouse_force_pass_scroll_events":true,"mouse_default_cursor_shape":0,"shortcut_context":null,"theme":null,"theme_type_variation":&"","color":Color(1, 1, 1, 0),"script":null)

portrait_panel = Object(Panel,"_import_path":NodePath(""),"unique_name_in_owner":false,"process_mode":0,"process_priority":0,"process_physics_priority":0,"process_thread_group":0,"editor_description":"","visible":true,"modulate":Color(1, 1, 1, 1),"self_modulate":Color(1, 1, 1, 1),"show_behind_parent":false,"top_level":false,"clip_children":0,"light_mask":1,"visibility_layer":1,"z_index":0,"z_as_relative":true,"y_sort_enabled":false,"texture_filter":0,"texture_repeat":0,"material":null,"use_parent_material":false,"clip_contents":false,"custom_minimum_size":Vector2(0, 0),"layout_direction":0,"layout_mode":0,"anchors_preset":0,"anchor_left":0.0,"anchor_top":0.0,"anchor_right":0.0,"anchor_bottom":0.0,"offset_left":0.0,"offset_top":0.0,"offset_right":720.0,"offset_bottom":900.0,"grow_horizontal":1,"grow_vertical":1,"rotation":0.0,"scale":Vector2(1, 1),"pivot_offset":Vector2(0, 0),"size_flags_horizontal":1,"size_flags_vertical":1,"size_flags_stretch_ratio":1.0,"auto_translate":true,"localize_numeral_system":true,"tooltip_text":"","focus_neighbor_left":NodePath(""),"focus_neighbor_top":NodePath(""),"focus_neighbor_right":NodePath(""),"focus_neighbor_bottom":NodePath(""),"focus_next":NodePath(""),"focus_previous":NodePath(""),"focus_mode":0,"mouse_filter":0,"mouse_force_pass_scroll_events":true,"mouse_default_cursor_shape":0,"shortcut_context":null,"theme":null,"theme_type_variation":&"","script":null)

left_arrow = Object(Panel,"_import_path":NodePath(""),"unique_name_in_owner":false,"process_mode":0,"process_priority":0,"process_physics_priority":0,"process_thread_group":0,"editor_description":"","visible":true,"modulate":Color(1, 1, 1, 1),"self_modulate":Color(1, 1, 1, 1),"show_behind_parent":false,"top_level":false,"clip_children":0,"light_mask":1,"visibility_layer":1,"z_index":0,"z_as_relative":true,"y_sort_enabled":false,"texture_filter":0,"texture_repeat":0,"material":null,"use_parent_material":false,"clip_contents":false,"custom_minimum_size":Vector2(150, 0),"layout_direction":0,"layout_mode":0,"anchors_preset":0,"anchor_left":0.0,"anchor_top":0.0,"anchor_right":0.0,"anchor_bottom":0.0,"offset_left":-172.5,"offset_top":-8.0,"offset_right":127.5,"offset_bottom":142.0,"grow_horizontal":1,"grow_vertical":1,"rotation":0.0,"scale":Vector2(1, 1),"pivot_offset":Vector2(0, 0),"size_flags_horizontal":1,"size_flags_vertical":1,"size_flags_stretch_ratio":1.0,"auto_translate":true,"localize_numeral_system":true,"tooltip_text":"","focus_neighbor_left":NodePath(""),"focus_neighbor_top":NodePath(""),"focus_neighbor_right":NodePath(""),"focus_neighbor_bottom":NodePath(""),"focus_next":NodePath(""),"focus_previous":NodePath(""),"focus_mode":0,"mouse_filter":0,"mouse_force_pass_scroll_events":true,"mouse_default_cursor_shape":0,"shortcut_context":null,"theme":null,"theme_type_variation":&"","script":Resource("res://UI_Details/button_styled.gd"),"button_color":Color(0.72549, 0.878431, 0.270588, 1),"button_text":"<<","button_text_size":0,"button_size":Vector2(300, 100),"button_toggle_mode":false,"button_pressed":false,"home_icon":false)

right_arrow = Object(Panel,"_import_path":NodePath(""),"unique_name_in_owner":false,"process_mode":0,"process_priority":0,"process_physics_priority":0,"process_thread_group":0,"editor_description":"","visible":true,"modulate":Color(1, 1, 1, 1),"self_modulate":Color(1, 1, 1, 1),"show_behind_parent":false,"top_level":false,"clip_children":0,"light_mask":1,"visibility_layer":1,"z_index":0,"z_as_relative":true,"y_sort_enabled":false,"texture_filter":0,"texture_repeat":0,"material":null,"use_parent_material":false,"clip_contents":false,"custom_minimum_size":Vector2(300, 75),"layout_direction":0,"layout_mode":1,"anchors_preset":15,"anchor_left":0.0,"anchor_top":0.0,"anchor_right":1.0,"anchor_bottom":1.0,"offset_left":-49.0,"offset_top":-8.0,"offset_right":251.0,"offset_bottom":67.0,"grow_horizontal":2,"grow_vertical":2,"rotation":0.0,"scale":Vector2(1, 1),"pivot_offset":Vector2(0, 0),"size_flags_horizontal":1,"size_flags_vertical":1,"size_flags_stretch_ratio":1.0,"auto_translate":true,"localize_numeral_system":true,"tooltip_text":"","focus_neighbor_left":NodePath(""),"focus_neighbor_top":NodePath(""),"focus_neighbor_right":NodePath(""),"focus_neighbor_bottom":NodePath(""),"focus_next":NodePath(""),"focus_previous":NodePath(""),"focus_mode":0,"mouse_filter":0,"mouse_force_pass_scroll_events":true,"mouse_default_cursor_shape":0,"shortcut_context":null,"theme":null,"theme_type_variation":&"","script":Resource("res://UI_Details/button_styled.gd"),"button_color":Color(0.72549, 0.878431, 0.270588, 1),"button_text":">>","button_text_size":0,"button_size":Vector2(300, 100),"button_toggle_mode":false,"button_pressed":false,"home_icon":false)

localization_buttons = Object(HBoxContainer,"_import_path":NodePath(""),"unique_name_in_owner":false,"process_mode":0,"process_priority":0,"process_physics_priority":0,"process_thread_group":0,"editor_description":"","visible":true,"modulate":Color(1, 1, 1, 1),"self_modulate":Color(1, 1, 1, 1),"show_behind_parent":false,"top_level":false,"clip_children":0,"light_mask":1,"visibility_layer":1,"z_index":0,"z_as_relative":true,"y_sort_enabled":false,"texture_filter":0,"texture_repeat":0,"material":null,"use_parent_material":false,"clip_contents":false,"custom_minimum_size":Vector2(0, 0),"layout_direction":0,"layout_mode":0,"anchors_preset":0,"anchor_left":0.0,"anchor_top":0.0,"anchor_right":0.0,"anchor_bottom":0.0,"offset_left":408.0,"offset_top":1120.0,"offset_right":573.0,"offset_bottom":1195.0,"grow_horizontal":1,"grow_vertical":1,"rotation":0.0,"scale":Vector2(1, 1),"pivot_offset":Vector2(0, 0),"size_flags_horizontal":1,"size_flags_vertical":1,"size_flags_stretch_ratio":1.0,"auto_translate":true,"localize_numeral_system":true,"tooltip_text":"","focus_neighbor_left":NodePath(""),"focus_neighbor_top":NodePath(""),"focus_neighbor_right":NodePath(""),"focus_neighbor_bottom":NodePath(""),"focus_next":NodePath(""),"focus_previous":NodePath(""),"focus_mode":0,"mouse_filter":1,"mouse_force_pass_scroll_events":true,"mouse_default_cursor_shape":0,"shortcut_context":null,"theme":null,"theme_type_variation":&"","theme_override_constants/separation":15,"alignment":0,"script":null)

home_button = Object(Panel,"_import_path":NodePath(""),"unique_name_in_owner":false,"process_mode":0,"process_priority":0,"process_physics_priority":0,"process_thread_group":0,"editor_description":"","visible":true,"modulate":Color(1, 1, 1, 1),"self_modulate":Color(1, 1, 1, 1),"show_behind_parent":false,"top_level":false,"clip_children":0,"light_mask":1,"visibility_layer":1,"z_index":3,"z_as_relative":false,"y_sort_enabled":false,"texture_filter":0,"texture_repeat":0,"material":null,"use_parent_material":false,"clip_contents":false,"custom_minimum_size":Vector2(0, 0),"layout_direction":0,"layout_mode":0,"anchors_preset":0,"anchor_left":0.0,"anchor_top":0.0,"anchor_right":0.0,"anchor_bottom":0.0,"offset_left":35.0,"offset_top":1120.0,"offset_right":110.0,"offset_bottom":1195.0,"grow_horizontal":1,"grow_vertical":1,"rotation":0.0,"scale":Vector2(1, 1),"pivot_offset":Vector2(0, 0),"size_flags_horizontal":1,"size_flags_vertical":1,"size_flags_stretch_ratio":1.0,"auto_translate":true,"localize_numeral_system":true,"tooltip_text":"","focus_neighbor_left":NodePath(""),"focus_neighbor_top":NodePath(""),"focus_neighbor_right":NodePath(""),"focus_neighbor_bottom":NodePath(""),"focus_next":NodePath(""),"focus_previous":NodePath(""),"focus_mode":0,"mouse_filter":0,"mouse_force_pass_scroll_events":true,"mouse_default_cursor_shape":0,"shortcut_context":null,"theme":null,"theme_type_variation":&"","script":Resource("res://UI_Details/button_styled.gd"),"button_color":Color(1, 1, 1, 1),"button_text":"","button_text_size":0,"button_size":Vector2(75, 75),"button_toggle_mode":false,"button_pressed":false,"home_icon":true)

timer = Object(Timer,"_import_path":NodePath(""),"unique_name_in_owner":false,"process_mode":0,"process_priority":0,"process_physics_priority":0,"process_thread_group":0,"editor_description":"","process_callback":1,"wait_time":10.0,"one_shot":false,"autostart":true,"script":null)


[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1080.0
offset_bottom = 1920.0
color = Color(0.64134, 0.578624, 0.842592, 1)
script = ExtResource("1_5hcky")

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 720.0
offset_bottom = 900.0

[node name="Button_LeftArrow" parent="." instance=ExtResource("7_jwkf8")]
custom_minimum_size = Vector2(150, 0)
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -172.5
offset_top = -8.0
offset_right = 127.5
offset_bottom = 142.0
grow_horizontal = 1
grow_vertical = 1
button_color = Color(0.72549, 0.878431, 0.270588, 1)
button_text = "<<"
button_size = Vector2(300, 100)
button_toggle_mode = false

[node name="Button_RightArrow" parent="." instance=ExtResource("7_jwkf8")]
custom_minimum_size = Vector2(300, 75)
layout_mode = 1
offset_left = -49.0
offset_top = -8.0
offset_right = 251.0
offset_bottom = 67.0
button_color = Color(0.72549, 0.878431, 0.270588, 1)
button_text = ">>"
button_size = Vector2(300, 100)
button_toggle_mode = false

[node name="InputLock" type="ColorRect" parent="."]
visible = false
layout_mode = 2
offset_left = -1.0
offset_top = 1.0
offset_right = 717.0
offset_bottom = 1271.0
color = Color(1, 1, 1, 0)
script = ExtResource("1_5hcky")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_top = 142.0
offset_right = 719.0
offset_bottom = 400.0

[node name="Label" type="Label" parent="CenterContainer"]
layout_mode = 2
theme = ExtResource("10_bt386")
theme_override_font_sizes/font_size = 64
text = "FAMOUS_GUESTS"

[node name="Button_Home" parent="." instance=ExtResource("7_jwkf8")]
z_index = 3
z_as_relative = false
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 35.0
offset_top = 1120.0
offset_right = 110.0
offset_bottom = 1195.0
grow_horizontal = 1
grow_vertical = 1
button_color = Color(1, 1, 1, 1)
button_size = Vector2(75, 75)
button_toggle_mode = false
home_icon = true

[node name="Localization_Buttons" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 408.0
offset_top = 1120.0
offset_right = 573.0
offset_bottom = 1195.0
theme_override_constants/separation = 15

[node name="Translation_DE" parent="Localization_Buttons" instance=ExtResource("7_jwkf8")]
z_index = 3
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_vertical = 0
button_color = Color(0.976471, 0.203922, 0, 1)
button_text = "De"
button_size = Vector2(75, 75)
button_toggle_mode = false

[node name="Translation_EN" parent="Localization_Buttons" instance=ExtResource("7_jwkf8")]
z_index = 3
z_as_relative = false
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_vertical = 0
button_color = Color(0, 0.333333, 0.686275, 1)
button_text = "En"
button_size = Vector2(75, 75)
button_toggle_mode = false

[node name="InputLock2" type="ColorRect" parent="."]
visible = false
z_index = 100
layout_mode = 2
offset_left = -1.0
offset_top = 1.0
offset_right = 717.0
offset_bottom = 1077.0
color = Color(1, 1, 1, 0)

[node name="Logo2" type="TextureRect" parent="."]
custom_minimum_size = Vector2(785, 209)
layout_mode = 0
offset_left = 227.0
offset_top = 44.0
offset_right = 671.0
offset_bottom = 162.0
texture = ExtResource("5_6xri5")
expand_mode = 1
stretch_mode = 5

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="child_button_pressed" from="Button_LeftArrow" to="." method="_on_button_left_arrow_pressed"]
[connection signal="child_button_pressed" from="Button_RightArrow" to="." method="_on_button_right_arrow_pressed"]
[connection signal="child_button_pressed" from="Button_Home" to="." method="_on_button_home_pressed"]
[connection signal="child_button_pressed" from="Localization_Buttons/Translation_DE" to="." method="_on_translation_de_child_button_pressed"]
[connection signal="child_button_pressed" from="Localization_Buttons/Translation_EN" to="." method="_on_translation_en_child_button_pressed"]
